--- a/experimentation/Diabetes Ridge Regression Experimentation Pipeline.ipynb
+++ b/experimentation/Diabetes Ridge Regression Experimentation Pipeline.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiment with parameters for a Ridge Regression Model on the Diabetes Dataset in an Azure ML Pipeline"
+    "# Azure MLパイプラインにおける糖尿病データセットのリッジ回帰モデルのパラメータの実験"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is for experimenting with different parameters to train a ridge regression model on the Diabetes dataset."
+    "このノートブックは、糖尿病データセット上でリッジ回帰モデルを訓練するために、さまざまなパラメータを使って実験するためのものです。"
    ]
   },
   {
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change out of the experimentation directory\n",
+    "# 実験ディレクトリからの変更\n",
     "%cd .."
    ]
   },
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the workspace from the saved config file\n",
+    "# 保存された設定ファイルからワークスペースを読み込む\n",
     "ws = Workspace.from_config()"
    ]
   },
@@ -52,14 +52,14 @@
    "source": [
     "import os, shutil\n",
     "\n",
-    "# Create a folder for the experiment files\n",
+    "# 実験ファイル用のフォルダを作成する\n",
     "training_folder = 'diabetes-training'\n",
     "os.makedirs(training_folder, exist_ok=True)\n",
     "\n",
-    "# Copy the data file into the experiment folder\n",
+    "# 実験フォルダにデータファイルをコピー\n",
     "shutil.copy('data/diabetes.csv', os.path.join(training_folder, \"diabetes.csv\"))\n",
     "\n",
-    "# Copy the train functions into the experiment folder\n",
+    "# 実験フォルダにtrain関数をコピー\n",
     "shutil.copy('diabetes_regression/training/train.py', os.path.join(training_folder, \"train.py\"))"
    ]
   },
@@ -93,7 +93,7 @@
    "outputs": [],
    "source": [
     "%%writefile $training_folder/diabetes_training.py\n",
-    "# Import libraries\n",
+    "# ライブラリのインポート\n",
     "from azureml.core import Run\n",
     "import pandas as pd\n",
     "import shutil\n",
@@ -101,37 +101,37 @@
     "\n",
     "from train import split_data, train_model\n",
     "\n",
-    "# Get parameters\n",
+    "# パラメータの取得\n",
     "parser = argparse.ArgumentParser()\n",
     "parser.add_argument('--output_folder', type=str, dest='output_folder', default=\"diabetes_model\", help='output folder')\n",
     "args = parser.parse_args()\n",
     "output_folder = args.output_folder\n",
     "\n",
-    "# Get the experiment run context\n",
+    "# 実験の実行コンテキストの取得\n",
     "run = Run.get_context()\n",
     "\n",
-    "# load the diabetes dataset\n",
+    "# 糖尿病データセットの読み込み\n",
     "print(\"Loading Data...\")\n",
     "train_df = pd.read_csv('diabetes.csv')\n",
     "\n",
     "data = split_data(train_df)\n",
     "\n",
-    "# Specify the parameters to test\n",
+    "# テストするパラメータを指定する\n",
     "with open(\"parameters.json\") as f:\n",
     "    pars = json.load(f)\n",
     "    train_args = pars[\"training\"]\n",
     "\n",
-    "# Log parameters\n",
+    "# パラメータのログ\n",
     "for k, v in train_args.items():\n",
     "    run.log(k, v)\n",
     "\n",
     "model, metrics = train_model(data, train_args)\n",
     "\n",
-    "# Log metrics\n",
+    "# メトリクスのログ\n",
     "for k, v in metrics.items():\n",
     "    run.log(k, v)\n",
     "\n",
-    "# Save the parameters file to the outputs folder\n",
+    "# パラメータファイルを出力フォルダに保存する\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "shutil.copy('parameters.json', os.path.join(output_folder, 'parameters.json'))\n",
     "joblib.dump(value=model, filename= output_folder + \"/model.pkl\")\n",
@@ -146,21 +146,21 @@
    "outputs": [],
    "source": [
     "%%writefile $training_folder/register_diabetes.py\n",
-    "# Import libraries\n",
+    "# ライブラリのインポート\n",
     "import argparse\n",
     "import joblib\n",
     "from azureml.core import Workspace, Model, Run\n",
     "\n",
-    "# Get parameters\n",
+    "# パラメータの取得\n",
     "parser = argparse.ArgumentParser()\n",
     "parser.add_argument('--model_folder', type=str, dest='model_folder', default=\"diabetes_model\", help='model location')\n",
     "args = parser.parse_args()\n",
     "model_folder = args.model_folder\n",
     "\n",
-    "# Get the experiment run context\n",
+    "# 実験の実行コンテキストの取得\n",
     "run = Run.get_context()\n",
     "\n",
-    "# load the model\n",
+    "# モデルの読みこみ\n",
     "print(\"Loading model from \" + model_folder)\n",
     "model_file = model_folder + \"/model.pkl\"\n",
     "model = joblib.load(model_file)\n",
@@ -184,12 +184,12 @@
     "\n",
     "cluster_name = \"aml-cluster\"\n",
     "\n",
-    "# Verify that cluster exists\n",
+    "# クラスタが存在することを確認\n",
     "try:\n",
     "    pipeline_cluster = ComputeTarget(workspace=ws, name=cluster_name)\n",
     "    print('Found existing cluster, use it.')\n",
     "except ComputeTargetException:\n",
-    "    # If not, create it\n",
+    "    # もしない場合は作成\n",
     "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
     "                                                           max_nodes=4,\n",
     "                                                           idle_seconds_before_scaledown=1800)\n",
@@ -208,29 +208,29 @@
     "from azureml.core.conda_dependencies import CondaDependencies\n",
     "from azureml.core.runconfig import RunConfiguration\n",
     "\n",
-    "# Create a Python environment for the experiment\n",
+    "# 実験用のPython環境を作る\n",
     "diabetes_env = Environment(\"diabetes-pipeline-env\")\n",
-    "diabetes_env.python.user_managed_dependencies = False # Let Azure ML manage dependencies\n",
-    "diabetes_env.docker.enabled = True # Use a docker container\n",
+    "diabetes_env.python.user_managed_dependencies = False # Azure MLに依存関係を管理させる\n",
+    "diabetes_env.docker.enabled = True # Dockerイメージを利用する\n",
     "\n",
-    "# Create a set of package dependencies\n",
+    "# パッケージの依存関係のセットを作成する\n",
     "diabetes_packages = CondaDependencies.create(conda_packages=['scikit-learn','pandas'],\n",
     "                                             pip_packages=['azureml-sdk'])\n",
     "\n",
-    "# Add the dependencies to the environment\n",
+    "# 環境に依存関係を追加する\n",
     "diabetes_env.python.conda_dependencies = diabetes_packages\n",
     "\n",
-    "# Register the environment (just in case you want to use it again)\n",
+    "# 環境を登録する (また利用するときのために)\n",
     "diabetes_env.register(workspace=ws)\n",
     "registered_env = Environment.get(ws, 'diabetes-pipeline-env')\n",
     "\n",
-    "# Create a new runconfig object for the pipeline\n",
+    "# パイプライン用の新しいrunconfigオブジェクトを作成します。\n",
     "pipeline_run_config = RunConfiguration()\n",
     "\n",
-    "# Use the compute you created above. \n",
+    "# 上で作成したコンピュートを使用する\n",
     "pipeline_run_config.target = pipeline_cluster\n",
     "\n",
-    "# Assign the environment to the run configuration\n",
+    "# 実行設定に環境を割り当てる\n",
     "pipeline_run_config.environment = registered_env\n",
     "\n",
     "print (\"Run configuration created.\")"
@@ -246,10 +246,10 @@
     "from azureml.pipeline.steps import PythonScriptStep, EstimatorStep\n",
     "from azureml.train.estimator import Estimator\n",
     "\n",
-    "# Get the training dataset\n",
+    "# トレーニングデータセットを取得する\n",
     "#diabetes_ds = ws.datasets.get(\"diabetes dataset\")\n",
     "\n",
-    "# Create a PipelineData (temporary Data Reference) for the model folder\n",
+    "# モデルフォルダにPipelineData(一時データ参照)を作成します。\n",
     "model_folder = PipelineData(\"model_folder\", datastore=ws.get_default_datastore())\n",
     "\n",
     "estimator = Estimator(source_directory=training_folder,\n",
@@ -257,7 +257,7 @@
     "                        environment_definition=pipeline_run_config.environment,\n",
     "                        entry_script='diabetes_training.py')\n",
     "\n",
-    "# Step 1, run the estimator to train the model\n",
+    "# ステップ1, モデルを訓練するために推定器を実行する\n",
     "train_step = EstimatorStep(name = \"Train Model\",\n",
     "                           estimator=estimator, \n",
     "                           estimator_entry_script_arguments=['--output_folder', model_folder],\n",
@@ -265,7 +265,7 @@
     "                           compute_target = pipeline_cluster,\n",
     "                           allow_reuse = True)\n",
     "\n",
-    "# Step 2, run the model registration script\n",
+    "# ステップ2, モデル登録スクリプトを実行する\n",
     "register_step = PythonScriptStep(name = \"Register Model\",\n",
     "                                source_directory = training_folder,\n",
     "                                script_name = \"register_diabetes.py\",\n",
@@ -288,12 +288,12 @@
     "from azureml.pipeline.core import Pipeline\n",
     "from azureml.widgets import RunDetails\n",
     "\n",
-    "# Construct the pipeline\n",
+    "# パイプラインの構成\n",
     "pipeline_steps = [train_step, register_step]\n",
     "pipeline = Pipeline(workspace = ws, steps=pipeline_steps)\n",
     "print(\"Pipeline is built.\")\n",
     "\n",
-    "# Create an experiment and run the pipeline\n",
+    "# 実験を作成してパイプラインを実行する\n",
     "experiment = Experiment(workspace = ws, name = 'diabetes-training-pipeline')\n",
     "pipeline_run = experiment.submit(pipeline, regenerate_outputs=True)\n",
     "print(\"Pipeline submitted for execution.\")\n",
