--- a/experimentation/Diabetes Ridge Regression Parameter Experimentation.ipynb
+++ b/experimentation/Diabetes Ridge Regression Parameter Experimentation.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiment with parameters for a Ridge Regression Model on the Diabetes Dataset"
+    "# 糖尿病データセットにおけるリッジ回帰モデルのパラメータを用いた実験"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is for experimenting with different parameters to train a ridge regression model on the Diabetes dataset."
+    "このノートブックは、糖尿病データセット上でリッジ回帰モデルを訓練するために、さまざまなパラメータを使って実験するためのものです。"
    ]
   },
   {
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change out of the experimentation directory\n",
+    "# 実験ディレクトリからの変更\n",
     "%cd .."
    ]
   },
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the workspace from the saved config file\n",
+    "# 保存された設定ファイルからワークスペースを読み込む\n",
     "ws = Workspace.from_config()"
    ]
   },
@@ -52,14 +52,14 @@
    "source": [
     "import os, shutil\n",
     "\n",
-    "# Create a folder for the experiment files\n",
+    "# 実験ファイル用のフォルダを作成する\n",
     "training_folder = 'diabetes-training'\n",
     "os.makedirs(training_folder, exist_ok=True)\n",
     "\n",
-    "# Copy the data file into the experiment folder\n",
+    "# 実験フォルダにデータファイルをコピー\n",
     "shutil.copy('data/diabetes.csv', os.path.join(training_folder, \"diabetes.csv\"))\n",
     "\n",
-    "# Copy the train functions into the experiment folder\n",
+    "# 実験フォルダにtrain関数をコピー\n",
     "shutil.copy('diabetes_regression/training/train.py', os.path.join(training_folder, \"train.py\"))"
    ]
   },
@@ -93,7 +93,7 @@
    "outputs": [],
    "source": [
     "%%writefile $training_folder/diabetes_training.py\n",
-    "# Import libraries\n",
+    "# ライブラリのインポート\n",
     "from azureml.core import Run\n",
     "import json\n",
     "import os\n",
@@ -102,31 +102,31 @@
     "\n",
     "from train import split_data, train_model\n",
     "\n",
-    "# Get the experiment run context\n",
+    "# 実験の実行コンテキストの取得\n",
     "run = Run.get_context()\n",
     "\n",
-    "# load the diabetes dataset\n",
+    "# 糖尿病データセットの読み込み\n",
     "print(\"Loading Data...\")\n",
     "train_df = pd.read_csv('diabetes.csv')\n",
     "\n",
     "data = split_data(train_df)\n",
     "\n",
-    "# Specify the parameters to test\n",
+    "# テストするパラメータを指定する\n",
     "with open(\"parameters.json\") as f:\n",
     "    pars = json.load(f)\n",
     "    train_args = pars[\"training\"]\n",
     "\n",
-    "# Log parameters\n",
+    "# パラメータのログ\n",
     "for k, v in train_args.items():\n",
     "    run.log(k, v)\n",
     "\n",
     "model, metrics = train_model(data, train_args)\n",
     "\n",
-    "# Log metrics\n",
+    "# メトリクスのログ\n",
     "for k, v in metrics.items():\n",
     "    run.log(k, v)\n",
     "\n",
-    "# Save the parameters file to the outputs folder\n",
+    "# パラメータファイルを出力フォルダに保存する\n",
     "os.makedirs('outputs', exist_ok=True)\n",
     "shutil.copy('parameters.json', os.path.join('outputs', 'parameters.json'))\n",
     "    \n",
@@ -142,18 +142,18 @@
     "from azureml.train.estimator import Estimator\n",
     "from azureml.core import Experiment\n",
     "\n",
-    "# Create an estimator\n",
+    "# 推定機の作成\n",
     "estimator = Estimator(source_directory=training_folder,\n",
     "                      entry_script='diabetes_training.py',\n",
     "                      compute_target='local',\n",
     "                      conda_packages=['scikit-learn']\n",
     "                      )\n",
     "\n",
-    "# Create an experiment\n",
+    "# 実験の作成\n",
     "experiment_name = 'diabetes-training'\n",
     "experiment = Experiment(workspace = ws, name = experiment_name)\n",
     "\n",
-    "# Run the experiment based on the estimator\n",
+    "# 推定器に基づいて実験を行う\n",
     "run = experiment.submit(config=estimator)\n",
     "run.wait_for_completion(show_output=True)"
    ]
