--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train a Ridge Regression Model on the Diabetes Dataset"
+    "# 糖尿病データセットでのリッジ回帰モデルの訓練"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook loads the Diabetes dataset from sklearn, splits the data into training and validation sets, trains a Ridge regression model, validates the model on the validation set, and saves the model."
+    "このノートブックは、sklearnから糖尿病データセットをロードし、データをトレーニングセットと検証セットに分割し、リッジ回帰モデルをトレーニングし、検証セットでモデルを検証し、モデルを保存します。"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load Data"
+    "## データ読み込み"
    ]
   },
   {
@@ -260,7 +260,7 @@
     }
    ],
    "source": [
-    "# All data in a single dataframe\n",
+    "# 単一のデータフレーム内にすべてのデータ\n",
     "df.describe()"
    ]
   },
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Split Data into Training and Validation Sets"
+    "## データをトレーニングセットと検証セットに分割"
    ]
   },
   {
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train Model on Training Set"
+    "## トレーニングセットでモデルを訓練する"
    ]
   },
   {
@@ -311,7 +311,7 @@
     }
    ],
    "source": [
-    "# experiment parameters\n",
+    "# 実験パラメータ\n",
     "args = {\n",
     "    \"alpha\": 0.5\n",
     "}\n",
@@ -324,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validate Model on Validation Set"
+    "## 検証セットによるモデルの検証"
    ]
   },
   {
@@ -348,11 +348,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Save Model"
-   ]
+    "## モデルの保存"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -393,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
