Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -62,6 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def split_data(df):"
     "X = df.drop('Y', axis=1).values\n",
     "y = df['Y'].values\n",
     "\n",
@@ -69,6 +70,7 @@
     "    X, y, test_size=0.2, random_state=0)\n",
     "data = {\"train\": {\"X\": X_train, \"y\": y_train},\n",
     "        \"test\": {\"X\": X_test, \"y\": y_test}}"
+    "return data"
    ]
   },
   {
