Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -57,6 +57,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split Data into Training and Validation Sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": ["def = split_data(df):"
+   ]
+   },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
