Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -61,7 +61,8 @@
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": ["def = split_data(df):"
+   "source": [
+   "def = split_data(df):"
    ]
    },
    {
@@ -69,7 +70,8 @@
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": ["def = split_data(df):"
+   "source": [
+    "def = split_data(df):",
     "X = df.drop('Y', axis=1).values\n",
     "y = df['Y'].values\n",
     "\n",
