Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def = split_data(df):",
+    "def = split_data(df):\n",
     "X = df.drop('Y', axis=1).values\n",
     "y = df['Y'].values\n",
     "\n",
