Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Split the dataframe into test and train data"
+    "## Split Data into Training and Validation Sets"
    ]
   },
   {
@@ -65,6 +65,13 @@
    "def = split_data(df):"
    ]
    },
+   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split the dataframe into test and train data"
+   ]
+  },
    {
    "cell_type": "code",
    "execution_count": 10,
