--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -85,7 +85,8 @@
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=0)\n",
     "data = {\"train\": {\"X\": X_train, \"y\": y_train},\n",
-    "        \"test\": {\"X\": X_test, \"y\": y_test}}"
+    "        \"test\": {\"X\": X_test, \"y\": y_test}}"\n,
+    "    return data"     
    ]
   },
   {
