--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -93,6 +93,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Train the model, return the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+   "def train_model(data, args):\n",
+   "reg_model = Ridge(**args)\n",
+   "reg_model.fit(data["train"]["X"], data["train"]["y"])\n",
+   "   return reg_model"
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train Model on Training Set"
    ]
   },
