Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -104,7 +104,7 @@
    "source": [
    "def train_model(data, args):\n",
    "reg_model = Ridge(**args)\n",
-   "reg_model.fit(data["train"]["X"], data["train"]["y"])\n",
+   "reg_model.fit(data[\"train\"][\"X\"], data[\"train\"][\"y\"])\n",
    "   return reg_model"
   {
    "cell_type": "markdown",
