Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -151,6 +151,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+   "def = get_model_metrics(reg_model, data):"
+   ]
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate the metrics for the model"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -163,10 +178,11 @@
     }
    ],
    "source": [
+    "def = get_model_metrics(reg_model, data):\n"
     "preds = reg_model.predict(data[\"test\"][\"X\"])\n",
     "mse = mean_squared_error(preds, y_test)\n",
     "metrics = {\"mse\": mse}\n",
-    "print(metrics)"
+    " return metrics"
    ]
   },
   {
