Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
     }
    ],
    "source": [
-    "def = get_model_metrics(reg_model, data):\n"
+    "def = get_model_metrics(reg_model, data):\n",
     "preds = reg_model.predict(data[\"test\"][\"X\"])\n",
     "mse = mean_squared_error(preds, y_test)\n",
     "metrics = {\"mse\": mse}\n",
