Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -28,6 +28,23 @@
     "import pandas as pd"
    ]
   },
+  
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Main Program"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+   "def = main():"
+   ]
+   },
   {
    "cell_type": "markdown",
    "metadata": {},
