Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -42,7 +42,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-   "def = main():"
+   "def = main():",
+     "sample_data = load_diabetes()\n",
+    "\n",
+    "df = pd.DataFrame(\n",
+    "    data=sample_data.data,\n",
+    "    columns=sample_data.feature_names)\n",
+    "df['Y'] = sample_data.target"
    ]
    },
   {
