Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -43,6 +43,7 @@
    "outputs": [],
    "source": [
    "def = main():",
+    "# Load data\n",
      "sample_data = load_diabetes()\n",
     "\n",
     "df = pd.DataFrame(\n",
