Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -42,14 +42,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-   "def = main():",
+   "def = main():\n",
     "# Load data\n",
      "sample_data = load_diabetes()\n",
     "\n",
     "df = pd.DataFrame(\n",
     "    data=sample_data.data,\n",
     "    columns=sample_data.feature_names)\n",
-    "df['Y'] = sample_data.target"
+    "df['Y'] = sample_data.target\n"
+    "\n"
+    "## Split Data into Training and Validation Sets\n"
+    " def = split_data(df):"
    ]
    },
    {
