Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -49,9 +49,9 @@
     "df = pd.DataFrame(\n",
     "    data=sample_data.data,\n",
     "    columns=sample_data.feature_names)\n",
-    "df['Y'] = sample_data.target\n"
-    "\n"
-    "## Split Data into Training and Validation Sets\n"
+    "df['Y'] = sample_data.target\n",
+    "\n",
+    "## Split Data into Training and Validation Sets\n",
     " def = split_data(df):"
    ]
    },
