Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -52,7 +52,14 @@
     "df['Y'] = sample_data.target\n",
     "\n",
     "## Split Data into Training and Validation Sets\n",
-    " def = split_data(df):"
+    " def = split_data(df):\n"
+    "\n" 
+    "# experiment parameters\n",
+    "args = {\n",
+    "    \"alpha\": 0.5\n",
+    "}\n",
+    "\n",
+    "reg_model = Ridge(**args)",
    ]
    },
    {
