Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -51,10 +51,10 @@
     "    columns=sample_data.feature_names)\n",
     "df['Y'] = sample_data.target\n",
     "\n",
-    "## Split Data into Training and Validation Sets\n",
-    " def = split_data(df):\n"
-    "\n" 
-    "# experiment parameters\n",
+    "# Split Data into Training and Validation Sets\n",
+    " def = split_data(df):\n",
+    "\n", 
+    "# Train Model on Training Set\n",
     "args = {\n",
     "    \"alpha\": 0.5\n",
     "}\n",
