Update Diabetes Ridge Regression Training.ipynb

--- a/experimentation/Diabetes Ridge Regression Training.ipynb
+++ b/experimentation/Diabetes Ridge Regression Training.ipynb
@@ -59,7 +59,7 @@
     "    \"alpha\": 0.5\n",
     "}\n",
     "\n",
-    "reg_model = Ridge(**args)",
+    "reg_model = Ridge(**args)"
    ]
    },
    {
